Gravatar-image class created ensure image has bootstrap display flex, align-items centred and justify-content centred too.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -168,7 +168,8 @@ blockquote {
 }
 
 .cart-contents-outer,
-.checkout-total-outer { /* Ensures the payemnt summary views are centre of screen */
+.checkout-total-outer,
+.gravatar-image { /* Ensures the payemnt summary views are centre of screen */
   display: flex;
   align-items: center;
   justify-content: center;
